@@ -1,4 +1,4 @@
-{extends "root.html"}
+{extends 'root.html'}
 
 {block "content"}
 SecondLevel
